# TAK-Note

./: .gitignore  Plugin.py  README.md  __init__.py  app.py  default_config.py  nodeids  pyproject.toml  test_cot_generation.py
ots_notehub_plugin/: app.py
tak_note/: __init__.py  app.py  default_config.py
tests/: test_cot_generation.py
