[tool.poetry]
name = "TAK-Note"
version = "0.0.0"
description = "Blues Wireless Notehub integration plugin for OpenTAKServer"
authors = ["Chris Lee <chris@southeastexpeditionmed.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/osh-labs/TAK-Note"
repository = "https://github.com/osh-labs/TAK-Note"
keywords = ["opentakserver", "atak", "blues wireless", "notecard", "notehub", "cot", "tak"]
packages = [{include = "tak_note"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies — opentakserver and Flask are available in the OTS venv.
# Declare them as optional deps so they don't force a reinstall when installing
# this plugin into an existing OTS environment.
opentakserver = {version = ">=1.5.0", optional = true}
flask = {version = ">=3.0.0", optional = true}
# Required runtime dependencies not bundled with OTS
requests = ">=2.31.0"
pika = ">=1.3.2"

[tool.poetry.extras]
# Allow `pip install TAK-Note[dev]` for standalone development
dev = ["opentakserver", "flask"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pytest-mock = ">=3.0"
black = ">=24.0"

# ---------------------------------------------------------------------------
# Entry point — this is how PluginManager discovers the plugin class.
# The group name MUST match what OTS is configured to scan
# (default: "opentakserver.plugins").
# The key is the pip distribution name (lowercase, hyphens → underscores).
# ---------------------------------------------------------------------------
[tool.poetry.plugins."opentakserver.plugins"]
tak_note = "tak_note.app:NotehubPlugin"

# ---------------------------------------------------------------------------
# Versioning — git tags drive the version number automatically.
# Tag as "1.0.0", "1.1.0", etc. before running `poetry build`.
# ---------------------------------------------------------------------------
[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.poetry-dynamic-versioning.files."tak_note/__init__.py"]
persistent-substitution = true
initial-content = """
# Version placeholder — overwritten by poetry-dynamic-versioning at build time.
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "stubs"]

[tool.black]
line-length = 100
target-version = ["py311"]
